add temperature plot to fig 12

--- a/notebooks/analyse.ipynb
+++ b/notebooks/analyse.ipynb
@@ -90,13 +90,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_140"
+    "ds_140_2022 = xr.load_dataset(os.path.join(datadir, \"calibration_v1.4.0_harmonization_2022.nc\"))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds_140"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,18 +118,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = pl.subplots(1, 2, figsize=(18/2.54, 9/2.54))\n",
     "ax[0].fill_between(\n",
     "    ds_140.timebound, (\n",
-    "        ds_140.temperature.loc[dict(layer=0, scenario='ssp119')] -\n",
-    "        np.average(ds_140.temperature.loc[dict(layer=0, scenario='ssp119', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
+    "        ds_140.temperature.loc[dict(scenario='ssp119')] -\n",
+    "        np.average(ds_140.temperature.loc[dict(scenario='ssp119', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
     "    ).quantile(0.05, dim='config'), (\n",
-    "        ds_140.temperature.loc[dict(layer=0, scenario='ssp119')] -\n",
-    "        np.average(ds_140.temperature.loc[dict(layer=0, scenario='ssp119', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
+    "        ds_140.temperature.loc[dict(scenario='ssp119')] -\n",
+    "        np.average(ds_140.temperature.loc[dict(scenario='ssp119', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
     "    ).quantile(0.95, dim='config'),\n",
     "    color='k',\n",
     "    alpha=0.1,\n",
@@ -127,8 +137,8 @@
     ");\n",
     "ax[0].plot(\n",
     "    ds_140.timebound, (\n",
-    "        ds_140.temperature.loc[dict(layer=0, scenario='ssp119')] -\n",
-    "        np.average(ds_140.temperature.loc[dict(layer=0, scenario='ssp119', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
+    "        ds_140.temperature.loc[dict(scenario='ssp119')] -\n",
+    "        np.average(ds_140.temperature.loc[dict(scenario='ssp119', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
     "    ).median(dim='config'),\n",
     "    color='k',\n",
     "    label='calibration v1.4.0'\n",
@@ -136,11 +146,11 @@
     "\n",
     "ax[0].fill_between(\n",
     "    ds_141.timebound, (\n",
-    "        ds_141.temperature.loc[dict(layer=0, scenario='ssp119')] -\n",
-    "        np.average(ds_141.temperature.loc[dict(layer=0, scenario='ssp119', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
+    "        ds_141.temperature.loc[dict(scenario='ssp119')] -\n",
+    "        np.average(ds_141.temperature.loc[dict(scenario='ssp119', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
     "    ).quantile(0.05, dim='config'), (\n",
-    "        ds_141.temperature.loc[dict(layer=0, scenario='ssp119')] -\n",
-    "        np.average(ds_141.temperature.loc[dict(layer=0, scenario='ssp119', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
+    "        ds_141.temperature.loc[dict(scenario='ssp119')] -\n",
+    "        np.average(ds_141.temperature.loc[dict(scenario='ssp119', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
     "    ).quantile(0.95, dim='config'),\n",
     "    color='r',\n",
     "    alpha=0.1,\n",
@@ -148,8 +158,8 @@
     ");\n",
     "ax[0].plot(\n",
     "    ds_141.timebound, (\n",
-    "        ds_141.temperature.loc[dict(layer=0, scenario='ssp119')] -\n",
-    "        np.average(ds_141.temperature.loc[dict(layer=0, scenario='ssp119', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
+    "        ds_141.temperature.loc[dict(scenario='ssp119')] -\n",
+    "        np.average(ds_141.temperature.loc[dict(scenario='ssp119', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
     "    ).median(dim='config'),\n",
     "    color='r',\n",
     "    label='calibration v1.4.1'\n",
@@ -161,11 +171,11 @@
     "\n",
     "ax[1].fill_between(\n",
     "    ds_140.timebound, (\n",
-    "        ds_140.temperature.loc[dict(layer=0, scenario='ssp585')] -\n",
-    "        np.average(ds_140.temperature.loc[dict(layer=0, scenario='ssp585', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
+    "        ds_140.temperature.loc[dict(scenario='ssp585')] -\n",
+    "        np.average(ds_140.temperature.loc[dict(scenario='ssp585', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
     "    ).quantile(0.05, dim='config'), (\n",
-    "        ds_140.temperature.loc[dict(layer=0, scenario='ssp585')] -\n",
-    "        np.average(ds_140.temperature.loc[dict(layer=0, scenario='ssp585', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
+    "        ds_140.temperature.loc[dict(scenario='ssp585')] -\n",
+    "        np.average(ds_140.temperature.loc[dict(scenario='ssp585', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
     "    ).quantile(0.95, dim='config'),\n",
     "    color='k',\n",
     "    alpha=0.1,\n",
@@ -173,8 +183,8 @@
     ");\n",
     "ax[1].plot(\n",
     "    ds_140.timebound, (\n",
-    "        ds_140.temperature.loc[dict(layer=0, scenario='ssp585')] -\n",
-    "        np.average(ds_140.temperature.loc[dict(layer=0, scenario='ssp585', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
+    "        ds_140.temperature.loc[dict(scenario='ssp585')] -\n",
+    "        np.average(ds_140.temperature.loc[dict(scenario='ssp585', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
     "    ).median(dim='config'),\n",
     "    color='k',\n",
     "    label='calibration v1.4.0'\n",
@@ -182,11 +192,11 @@
     "\n",
     "ax[1].fill_between(\n",
     "    ds_141.timebound, (\n",
-    "        ds_141.temperature.loc[dict(layer=0, scenario='ssp585')] -\n",
-    "        np.average(ds_141.temperature.loc[dict(layer=0, scenario='ssp585', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
+    "        ds_141.temperature.loc[dict(scenario='ssp585')] -\n",
+    "        np.average(ds_141.temperature.loc[dict(scenario='ssp585', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
     "    ).quantile(0.05, dim='config'), (\n",
-    "        ds_141.temperature.loc[dict(layer=0, scenario='ssp585')] -\n",
-    "        np.average(ds_141.temperature.loc[dict(layer=0, scenario='ssp585', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
+    "        ds_141.temperature.loc[dict(scenario='ssp585')] -\n",
+    "        np.average(ds_141.temperature.loc[dict(scenario='ssp585', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
     "    ).quantile(0.95, dim='config'),\n",
     "    color='r',\n",
     "    alpha=0.1,\n",
@@ -194,8 +204,8 @@
     ");\n",
     "ax[1].plot(\n",
     "    ds_141.timebound, (\n",
-    "        ds_141.temperature.loc[dict(layer=0, scenario='ssp585')] -\n",
-    "        np.average(ds_141.temperature.loc[dict(layer=0, scenario='ssp585', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
+    "        ds_141.temperature.loc[dict(scenario='ssp585')] -\n",
+    "        np.average(ds_141.temperature.loc[dict(scenario='ssp585', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
     "    ).median(dim='config'),\n",
     "    color='r',\n",
     "    label='calibration v1.4.1'\n",
@@ -209,29 +219,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(\n",
-    "    (\n",
-    "        ds_141.temperature.loc[dict(layer=0, scenario='ssp119')] -\n",
-    "        np.average(ds_141.temperature.loc[dict(layer=0, scenario='ssp119', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
-    "    ).median(dim='config')\n",
-    ").max().data[()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
     "(\n",
     "    (\n",
-    "        ds_140.temperature.loc[dict(layer=0, scenario='ssp119')] -\n",
-    "        np.average(ds_140.temperature.loc[dict(layer=0, scenario='ssp119', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
+    "        ds_141.temperature.loc[dict(scenario='ssp119')] -\n",
+    "        np.average(ds_141.temperature.loc[dict(scenario='ssp119', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
     "    ).median(dim='config')\n",
     ").max().data[()]"
    ]
@@ -243,32 +238,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pl.plot(\n",
-    "    ds_140.timebound, (\n",
-    "        ds_140.forcing.loc[dict(specie='Aerosol-cloud interactions', scenario='ssp119')] +\n",
-    "        ds_140.forcing.loc[dict(specie='Aerosol-radiation interactions', scenario='ssp119')]\n",
-    "    ).median(dim='config'),\n",
-    "    color='k',\n",
-    "    label='v1.4.0 (RCMIP)'\n",
-    ");\n",
-    "pl.plot(\n",
-    "    ds_141.timebound, (\n",
-    "        ds_141.forcing.loc[dict(specie='Aerosol-cloud interactions', scenario='ssp119')] +\n",
-    "        ds_141.forcing.loc[dict(specie='Aerosol-radiation interactions', scenario='ssp119')]\n",
-    "    ).median(dim='config'),\n",
-    "    color='r',\n",
-    "    label='v1.4.1 (CEDS)'\n",
-    ");\n",
-    "pl.xlim(1850, 2100)\n",
-    "pl.ylim(-1.5, 0)\n",
-    "pl.legend()\n",
-    "pl.title('SSP1-1.9 median aerosol forcing')"
+    "(\n",
+    "    (\n",
+    "        ds_140.temperature.loc[dict(scenario='ssp119')] -\n",
+    "        np.average(ds_140.temperature.loc[dict(scenario='ssp119', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
+    "    ).median(dim='config')\n",
+    ").max().data[()]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pl.plot(\n",
+    "#     ds_140.timebound, (\n",
+    "#         ds_140.forcing.loc[dict(specie='Aerosol-cloud interactions', scenario='ssp119')] +\n",
+    "#         ds_140.forcing.loc[dict(specie='Aerosol-radiation interactions', scenario='ssp119')]\n",
+    "#     ).median(dim='config'),\n",
+    "#     color='k',\n",
+    "#     label='v1.4.0 (RCMIP)'\n",
+    "# );\n",
+    "# pl.plot(\n",
+    "#     ds_141.timebound, (\n",
+    "#         ds_141.forcing.loc[dict(specie='Aerosol-cloud interactions', scenario='ssp119')] +\n",
+    "#         ds_141.forcing.loc[dict(specie='Aerosol-radiation interactions', scenario='ssp119')]\n",
+    "#     ).median(dim='config'),\n",
+    "#     color='r',\n",
+    "#     label='v1.4.1 (CEDS)'\n",
+    "# );\n",
+    "# pl.xlim(1850, 2100)\n",
+    "# pl.ylim(-1.5, 0)\n",
+    "# pl.legend()\n",
+    "# pl.title('SSP1-1.9 median aerosol forcing')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,11 +399,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = pl.subplots(1,2, figsize=(18/2.54, 9/2.54))\n",
+    "fig, ax = pl.subplots(1,3, figsize=(18/2.54, 7/2.54))\n",
     "\n",
     "for scenario in ['ssp119', 'ssp126', 'ssp245', 'ssp370', 'ssp585']:\n",
     "    ax[0].plot(\n",
@@ -431,7 +441,11 @@
     "ax[0].set_ylim(25, 55)\n",
     "ax[0].set_ylabel('Gt CO$_2$ yr$^{-1}$')\n",
     "ax[0].set_title('(a) CO$_2$ emissions')\n",
-    "\n",
+    "legend_elements = [\n",
+    "    Line2D([0], [0], color='k', label='GCP (cal. v1.4.1)'),\n",
+    "    Line2D([0], [0], color='k', ls=':', label='CMIP6 (cal. v1.4.0)'),\n",
+    "]\n",
+    "ax[0].legend(handles=legend_elements, loc='upper left', frameon=False, fontsize=7)\n",
     "\n",
     "for scenario in ['ssp119', 'ssp126', 'ssp245', 'ssp370', 'ssp585']:\n",
     "    # ax.fill_between(\n",
@@ -479,10 +493,10 @@
     "ax[1].set_title('(b) CO$_2$ concentration')\n",
     "\n",
     "legend_elements = [\n",
-    "    Patch(facecolor='k', lw=0, alpha=0.25, label='Calibration v1.4.1 5-95% range'),\n",
-    "    Line2D([0], [0], color='k', label='Calibration v1.4.1 median'),\n",
-    "    Line2D([0], [0], color='k', ls=':', label='Calibration v1.4.0 median'),\n",
-    "    Line2D([0], [0], color='k', lw=0.3, label='CMIP6 (Meinshausen et al. 2020)'),\n",
+    "    Patch(facecolor='k', lw=0, alpha=0.25, label='Cal. v1.4.1 5-95% range'),\n",
+    "    Line2D([0], [0], color='k', label='Cal. v1.4.1 median'),\n",
+    "    Line2D([0], [0], color='k', ls=':', label='Cal. v1.4.0 median'),\n",
+    "    Line2D([0], [0], color='k', lw=0.3, label='Meinshausen et al. 2020'),\n",
     "    Line2D([0], [0], color=colors['ssp585'], lw=1, label='SSP5-8.5'),\n",
     "    Line2D([0], [0], color=colors['ssp370'], lw=1, label='SSP3-7.0'),\n",
     "    Line2D([0], [0], color=colors['ssp245'], lw=1, label='SSP2-4.5'),\n",
@@ -490,8 +504,48 @@
     "    Line2D([0], [0], color=colors['ssp119'], lw=1, label='SSP1-1.9'),\n",
     "]\n",
     "\n",
-    "ax[1].legend(handles=legend_elements, loc='upper left', frameon=False)\n",
+    "ax[1].legend(handles=legend_elements, loc='upper left', frameon=False, fontsize=7)\n",
     "#pl.title('SSP5-8.5 median CO2 concentration')\n",
+    "\n",
+    "for scenario in ['ssp119', 'ssp126', 'ssp245', 'ssp370', 'ssp585']:\n",
+    "    ax[2].plot(\n",
+    "        ds_141.timebound,\n",
+    "        (\n",
+    "            ds_141.temperature.loc[dict(scenario=scenario)] -\n",
+    "            np.average(ds_141.temperature.loc[dict(scenario=scenario, timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
+    "        ).median(dim='config'),\n",
+    "        color=colors[scenario],\n",
+    "    )\n",
+    "    ax[2].plot(\n",
+    "        ds_140.timebound,\n",
+    "        (\n",
+    "            ds_140.temperature.loc[dict(scenario=scenario)] -\n",
+    "            np.average(ds_140.temperature.loc[dict(scenario=scenario, timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
+    "        ).median(dim='config'),\n",
+    "        color=colors[scenario],\n",
+    "        ls=\":\"\n",
+    "    )\n",
+    "    ax[2].plot(\n",
+    "        ds_140_2022.timebound,\n",
+    "        (\n",
+    "            ds_140_2022.temperature.loc[dict(scenario=scenario)] -\n",
+    "            np.average(ds_140_2022.temperature.loc[dict(scenario=scenario, timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
+    "        ).median(dim='config'),\n",
+    "        color=colors[scenario],\n",
+    "        ls=\"--\"\n",
+    "    )\n",
+    "ax[2].set_xlim(2000, 2100)\n",
+    "ax[2].set_ylim(0, 5)\n",
+    "ax[2].set_title(\"(c) Temperature anomaly (median)\")\n",
+    "ax[2].set_ylabel(\"°C\")\n",
+    "\n",
+    "legend_elements = [\n",
+    "    Line2D([0], [0], color='k', ls='-', label='Cal. v1.4.1'),\n",
+    "    Line2D([0], [0], color='k', ls='--', label='Cal. v1.4.0, 2022 harmon.'),\n",
+    "    Line2D([0], [0], color='k', ls=':', label='Cal. v1.4.0 median'),\n",
+    "]\n",
+    "\n",
+    "ax[2].legend(handles=legend_elements, loc='upper left', frameon=False, fontsize=7)\n",
     "\n",
     "fig.tight_layout()\n",
     "\n",
@@ -503,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,27 +685,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds_140.cumulative_emissions.loc[dict(specie='CO2', scenario='ssp245', config=0, timebound=2023)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_141.cumulative_emissions.loc[dict(specie='CO2', scenario='ssp245', config=0, timebound=2023)]"
+    "# ds_140.cumulative_emissions.loc[dict(specie='CO2', scenario='ssp245', config=0, timebound=2023)]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ds_141.cumulative_emissions.loc[dict(specie='CO2', scenario='ssp245', config=0, timebound=2023)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -716,7 +770,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
