--- a/notebooks/run.ipynb
+++ b/notebooks/run.ipynb
@@ -2,18 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5f86c56a-f483-42c8-ab7b-c115fdd4aeb7",
+   "id": "0",
    "metadata": {},
    "source": [
     "# Run and save out the two calibrations\n",
     "\n",
-    "Run the eight SSP scenarios. The v1.4.1 calibration will have different historical emissions to v1.4.0. The forcing and constraints set are exactly the same."
+    "Run the eight SSP scenarios for:\n",
+    "- The v1.4.1 calibration\n",
+    "- The v1.4.0 calibration\n",
+    "- The v1.4.0 calibration with ssp245 up to 2022 and other SSPs harmonized from this date"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b61aec79-9ea2-414d-b5c1-8f57c0fe7f97",
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f08d95b7-a96e-4806-8f31-9a21a1fd5e3b",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59ed7132-0cb8-4844-ae1b-61cf5cb52ef0",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a43cde15-a5bf-4949-921b-f5f07a3c136a",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91f06280-f28f-48d9-82b7-5bf092657a66",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "974f50f2-48cd-46ed-9145-f9a3d06da1c0",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "709a3582-90ad-4cee-92f1-a2189b2dff05",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d53b83e-7a8c-420c-bd4b-6db2f5664456",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9902dc53-1cfe-487a-b316-20ebd47043a7",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3aacdcd-72df-4537-8d88-202646a11efe",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10478f26-d1b5-4ee8-8d95-6f9bd5b36556",
+   "id": "11",
    "metadata": {},
    "source": [
     "## Get emissions into fair"
@@ -192,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "678e3a85-182a-402d-9fe2-d5e30b20a500",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17a1c1d2-c738-46c9-96f1-50cd6b860233",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8ee4684-7cba-4f53-be8c-66befdc90f2b",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,17 +486,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29f6fba2-56ef-41a5-85d7-b596a8bccab3",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
-    "f.to_netcdf(os.path.join(datadir, 'calibration_v1.4.1.nc'))"
+    "# We want: CO2: airborne fraction, emissions, concentration + temperature\n",
+    "ds = xr.Dataset(\n",
+    "    data_vars = dict(\n",
+    "        temperature = ([\"timebound\", \"scenario\", \"config\"], f.temperature.sel(layer=0).data),\n",
+    "        concentration = ([\"timebound\", \"scenario\", \"config\", \"specie\"], f.concentration.sel(specie=[\"CO2\", \"CH4\"]).data),\n",
+    "        emissions = ([\"timepoint\", \"scenario\", \"config\", \"specie\"], f.emissions.sel(specie=[\"CO2\", \"CH4\"]).data),\n",
+    "        airborne_fraction = ([\"timebound\", \"scenario\", \"config\", \"specie\"], f.airborne_fraction.sel(specie=[\"CO2\", \"CH4\"]).data)\n",
+    "    ),\n",
+    "    coords = dict(\n",
+    "        timebound = np.arange(1750, 2301),\n",
+    "        timepoint = np.arange(1750.5, 2300),\n",
+    "        scenario = scenarios,\n",
+    "        config = configs,\n",
+    "        specie = [\"CO2\", \"CH4\"]\n",
+    "    )\n",
+    ")\n",
+    "ds.to_netcdf(os.path.join(datadir, 'calibration_v1.4.1.nc'))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef591529-192f-468e-a49d-676363a9d581",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6944da07-2454-491c-aa15-5bc648609034",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ba3cb44-0e9c-47ac-a7c4-05cc40e860e8",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +785,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8de1af45-72ee-41b7-b69f-994cdc4a43d6",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,27 +795,344 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a04c6e76-150d-4deb-b693-a17b4edfec25",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
-    "f.to_netcdf(os.path.join(datadir, 'calibration_v1.4.0.nc'))"
+    "# We want: CO2: airborne fraction, emissions, concentration + temperature\n",
+    "ds = xr.Dataset(\n",
+    "    data_vars = dict(\n",
+    "        temperature = ([\"timebound\", \"scenario\", \"config\"], f.temperature.sel(layer=0).data),\n",
+    "        concentration = ([\"timebound\", \"scenario\", \"config\", \"specie\"], f.concentration.sel(specie=[\"CO2\", \"CH4\"]).data),\n",
+    "        emissions = ([\"timepoint\", \"scenario\", \"config\", \"specie\"], f.emissions.sel(specie=[\"CO2\", \"CH4\"]).data),\n",
+    "        airborne_fraction = ([\"timebound\", \"scenario\", \"config\", \"specie\"], f.airborne_fraction.sel(specie=[\"CO2\", \"CH4\"]).data)\n",
+    "    ),\n",
+    "    coords = dict(\n",
+    "        timebound = np.arange(1750, 2301),\n",
+    "        timepoint = np.arange(1750.5, 2300),\n",
+    "        scenario = scenarios,\n",
+    "        config = configs,\n",
+    "        specie = [\"CO2\", \"CH4\"]\n",
+    "    )\n",
+    ")\n",
+    "ds.to_netcdf(os.path.join(datadir, 'calibration_v1.4.0.nc'))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5718f446-86a1-4472-b14d-1c51b97fd716",
+   "id": "21",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "f = FAIR(ch4_method=\"Thornhill2021\")\n",
+    "f.define_time(1750, 2300, 1)\n",
+    "f.define_scenarios(scenarios)\n",
+    "f.define_configs(configs)\n",
+    "species, properties = read_properties()\n",
+    "species.remove(\"Halon-1202\")\n",
+    "species.remove(\"NOx aviation\")\n",
+    "species.remove(\"Contrails\")\n",
+    "f.define_species(species, properties)\n",
+    "f.allocate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "da_emissions_140_harm2022 = xr.load_dataarray(\n",
+    "    \"../output/emissions/v1.4.0/ssps_2022_harmonization_1750-2499.nc\"\n",
+    ")\n",
+    "da = da_emissions_140_harm2022.loc[dict(config=\"unspecified\")][:550, ...]\n",
+    "fe = da.expand_dims(dim=[\"config\"], axis=(2))\n",
+    "f.emissions = fe.drop_vars(\"config\") * np.ones((1, 1, output_ensemble_size, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fill the scenarios: v1.4.0\n",
+    "\n",
+    "# solar and volcanic forcing\n",
+    "fill(\n",
+    "    f.forcing,\n",
+    "    volcanic_forcing[:, None, None] * df_configs_140[\"fscale_Volcanic\"].values.squeeze(),\n",
+    "    specie=\"Volcanic\",\n",
+    ")\n",
+    "fill(\n",
+    "    f.forcing,\n",
+    "    solar_forcing[:, None, None] * df_configs_140[\"fscale_solar_amplitude\"].values.squeeze()\n",
+    "    + trend_shape[:, None, None] * df_configs_140[\"fscale_solar_trend\"].values.squeeze(),\n",
+    "    specie=\"Solar\",\n",
+    ")\n",
+    "# climate response\n",
+    "fill(\n",
+    "    f.climate_configs[\"ocean_heat_capacity\"],\n",
+    "    df_configs_140.loc[:, \"clim_c1\":\"clim_c3\"].values,\n",
+    ")\n",
+    "fill(\n",
+    "    f.climate_configs[\"ocean_heat_transfer\"],\n",
+    "    df_configs_140.loc[:, \"clim_kappa1\":\"clim_kappa3\"].values,\n",
+    ")  # not massively robust, since relies on kappa1, kappa2, kappa3 being in adjacent cols\n",
+    "fill(\n",
+    "    f.climate_configs[\"deep_ocean_efficacy\"],\n",
+    "    df_configs_140[\"clim_epsilon\"].values.squeeze(),\n",
+    ")\n",
+    "fill(\n",
+    "    f.climate_configs[\"gamma_autocorrelation\"],\n",
+    "    df_configs_140[\"clim_gamma\"].values.squeeze(),\n",
+    ")\n",
+    "fill(f.climate_configs[\"sigma_eta\"], df_configs_140[\"clim_sigma_eta\"].values.squeeze())\n",
+    "fill(f.climate_configs[\"sigma_xi\"], df_configs_140[\"clim_sigma_xi\"].values.squeeze())\n",
+    "fill(f.climate_configs[\"seed\"], df_configs_140[\"seed\"])\n",
+    "fill(f.climate_configs[\"stochastic_run\"], True)\n",
+    "fill(f.climate_configs[\"use_seed\"], True)\n",
+    "fill(f.climate_configs[\"forcing_4co2\"], df_configs_140[\"clim_F_4xCO2\"])\n",
+    "\n",
+    "# species level\n",
+    "f.fill_species_configs()\n",
+    "\n",
+    "# carbon cycle\n",
+    "fill(f.species_configs[\"iirf_0\"], df_configs_140[\"cc_r0\"].values.squeeze(), specie=\"CO2\")\n",
+    "fill(\n",
+    "    f.species_configs[\"iirf_airborne\"],\n",
+    "    df_configs_140[\"cc_rA\"].values.squeeze(),\n",
+    "    specie=\"CO2\",\n",
+    ")\n",
+    "fill(\n",
+    "    f.species_configs[\"iirf_uptake\"], df_configs_140[\"cc_rU\"].values.squeeze(), specie=\"CO2\"\n",
+    ")\n",
+    "fill(\n",
+    "    f.species_configs[\"iirf_temperature\"],\n",
+    "    df_configs_140[\"cc_rT\"].values.squeeze(),\n",
+    "    specie=\"CO2\",\n",
+    ")\n",
+    "\n",
+    "# aerosol indirect\n",
+    "fill(f.species_configs[\"aci_scale\"], df_configs_140[\"aci_beta\"].values.squeeze())\n",
+    "fill(\n",
+    "    f.species_configs[\"aci_shape\"],\n",
+    "    df_configs_140[\"aci_shape_so2\"].values.squeeze(),\n",
+    "    specie=\"Sulfur\",\n",
+    ")\n",
+    "fill(\n",
+    "    f.species_configs[\"aci_shape\"],\n",
+    "    df_configs_140[\"aci_shape_bc\"].values.squeeze(),\n",
+    "    specie=\"BC\",\n",
+    ")\n",
+    "fill(\n",
+    "    f.species_configs[\"aci_shape\"],\n",
+    "    df_configs_140[\"aci_shape_oc\"].values.squeeze(),\n",
+    "    specie=\"OC\",\n",
+    ")\n",
+    "\n",
+    "# methane lifetime baseline and sensitivity\n",
+    "fill(\n",
+    "    f.species_configs[\"unperturbed_lifetime\"],\n",
+    "    df_methane_140.loc[\"historical_best\", \"base\"],\n",
+    "    specie=\"CH4\",\n",
+    ")\n",
+    "fill(\n",
+    "    f.species_configs[\"ch4_lifetime_chemical_sensitivity\"],\n",
+    "    df_methane_140.loc[\"historical_best\", \"CH4\"],\n",
+    "    specie=\"CH4\",\n",
+    ")\n",
+    "fill(\n",
+    "    f.species_configs[\"ch4_lifetime_chemical_sensitivity\"],\n",
+    "    df_methane_140.loc[\"historical_best\", \"N2O\"],\n",
+    "    specie=\"N2O\",\n",
+    ")\n",
+    "fill(\n",
+    "    f.species_configs[\"ch4_lifetime_chemical_sensitivity\"],\n",
+    "    df_methane_140.loc[\"historical_best\", \"VOC\"],\n",
+    "    specie=\"VOC\",\n",
+    ")\n",
+    "fill(\n",
+    "    f.species_configs[\"ch4_lifetime_chemical_sensitivity\"],\n",
+    "    df_methane_140.loc[\"historical_best\", \"NOx\"],\n",
+    "    specie=\"NOx\",\n",
+    ")\n",
+    "fill(\n",
+    "    f.species_configs[\"ch4_lifetime_chemical_sensitivity\"],\n",
+    "    df_methane_140.loc[\"historical_best\", \"HC\"],\n",
+    "    specie=\"Equivalent effective stratospheric chlorine\",\n",
+    ")\n",
+    "fill(\n",
+    "    f.species_configs[\"lifetime_temperature_sensitivity\"],\n",
+    "    df_methane_140.loc[\"historical_best\", \"temp\"],\n",
+    ")\n",
+    "\n",
+    "# emissions adjustments for N2O and CH4 (we don't want to make these defaults as people\n",
+    "# might wanna run pulse expts with these gases)\n",
+    "fill(f.species_configs[\"baseline_emissions\"], 19.019783117809567, specie=\"CH4\")\n",
+    "fill(f.species_configs[\"baseline_emissions\"], 0.08602230754, specie=\"N2O\")\n",
+    "fill(f.species_configs[\"baseline_emissions\"], 19.423526730206152, specie=\"NOx\")\n",
+    "\n",
+    "# aerosol direct\n",
+    "for specie in [\n",
+    "    \"BC\",\n",
+    "    \"CH4\",\n",
+    "    \"N2O\",\n",
+    "    \"NH3\",\n",
+    "    \"NOx\",\n",
+    "    \"OC\",\n",
+    "    \"Sulfur\",\n",
+    "    \"VOC\",\n",
+    "    \"Equivalent effective stratospheric chlorine\",\n",
+    "]:\n",
+    "    fill(\n",
+    "        f.species_configs[\"erfari_radiative_efficiency\"],\n",
+    "        df_configs_140[f\"ari_{specie}\"],\n",
+    "        specie=specie,\n",
+    "    )\n",
+    "\n",
+    "# forcing scaling\n",
+    "for specie in [\n",
+    "    \"CO2\",\n",
+    "    \"CH4\",\n",
+    "    \"N2O\",\n",
+    "    \"Stratospheric water vapour\",\n",
+    "    \"Light absorbing particles on snow and ice\",\n",
+    "    \"Land use\",\n",
+    "]:\n",
+    "    fill(\n",
+    "        f.species_configs[\"forcing_scale\"],\n",
+    "        df_configs_140[f\"fscale_{specie}\"].values.squeeze(),\n",
+    "        specie=specie,\n",
+    "    )\n",
+    "\n",
+    "for specie in [\n",
+    "    \"CFC-11\",\n",
+    "    \"CFC-12\",\n",
+    "    \"CFC-113\",\n",
+    "    \"CFC-114\",\n",
+    "    \"CFC-115\",\n",
+    "    \"HCFC-22\",\n",
+    "    \"HCFC-141b\",\n",
+    "    \"HCFC-142b\",\n",
+    "    \"CCl4\",\n",
+    "    \"CHCl3\",\n",
+    "    \"CH2Cl2\",\n",
+    "    \"CH3Cl\",\n",
+    "    \"CH3CCl3\",\n",
+    "    \"CH3Br\",\n",
+    "    \"Halon-1211\",\n",
+    "    \"Halon-1301\",\n",
+    "    \"Halon-2402\",\n",
+    "    \"CF4\",\n",
+    "    \"C2F6\",\n",
+    "    \"C3F8\",\n",
+    "    \"c-C4F8\",\n",
+    "    \"C4F10\",\n",
+    "    \"C5F12\",\n",
+    "    \"C6F14\",\n",
+    "    \"C7F16\",\n",
+    "    \"C8F18\",\n",
+    "    \"NF3\",\n",
+    "    \"SF6\",\n",
+    "    \"SO2F2\",\n",
+    "    \"HFC-125\",\n",
+    "    \"HFC-134a\",\n",
+    "    \"HFC-143a\",\n",
+    "    \"HFC-152a\",\n",
+    "    \"HFC-227ea\",\n",
+    "    \"HFC-23\",\n",
+    "    \"HFC-236fa\",\n",
+    "    \"HFC-245fa\",\n",
+    "    \"HFC-32\",\n",
+    "    \"HFC-365mfc\",\n",
+    "    \"HFC-4310mee\",\n",
+    "]:\n",
+    "    fill(\n",
+    "        f.species_configs[\"forcing_scale\"],\n",
+    "        df_configs_140[\"fscale_minorGHG\"].values.squeeze(),\n",
+    "        specie=specie,\n",
+    "    )\n",
+    "\n",
+    "# ozone\n",
+    "for specie in [\n",
+    "    \"CH4\",\n",
+    "    \"N2O\",\n",
+    "    \"Equivalent effective stratospheric chlorine\",\n",
+    "    \"CO\",\n",
+    "    \"VOC\",\n",
+    "    \"NOx\",\n",
+    "]:\n",
+    "    fill(\n",
+    "        f.species_configs[\"ozone_radiative_efficiency\"],\n",
+    "        df_configs_140[f\"o3_{specie}\"],\n",
+    "        specie=specie,\n",
+    "    )\n",
+    "\n",
+    "# tune down volcanic efficacy\n",
+    "fill(f.species_configs[\"forcing_efficacy\"], 0.6, specie=\"Volcanic\")\n",
+    "\n",
+    "\n",
+    "# initial condition of CO2 concentration (but not baseline for forcing calculations)\n",
+    "fill(\n",
+    "    f.species_configs[\"baseline_concentration\"],\n",
+    "    df_configs_140[\"cc_co2_concentration_1750\"].values.squeeze(),\n",
+    "    specie=\"CO2\",\n",
+    ")\n",
+    "\n",
+    "# initial conditions\n",
+    "initialise(f.concentration, f.species_configs[\"baseline_concentration\"])\n",
+    "initialise(f.forcing, 0)\n",
+    "initialise(f.temperature, 0)\n",
+    "initialise(f.cumulative_emissions, 0)\n",
+    "initialise(f.airborne_emissions, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We want: CO2: airborne fraction, emissions, concentration + temperature\n",
+    "ds = xr.Dataset(\n",
+    "    data_vars = dict(\n",
+    "        temperature = ([\"timebound\", \"scenario\", \"config\"], f.temperature.sel(layer=0).data),\n",
+    "        concentration = ([\"timebound\", \"scenario\", \"config\", \"specie\"], f.concentration.sel(specie=[\"CO2\", \"CH4\"]).data),\n",
+    "        emissions = ([\"timepoint\", \"scenario\", \"config\", \"specie\"], f.emissions.sel(specie=[\"CO2\", \"CH4\"]).data),\n",
+    "        airborne_fraction = ([\"timebound\", \"scenario\", \"config\", \"specie\"], f.airborne_fraction.sel(specie=[\"CO2\", \"CH4\"]).data)\n",
+    "    ),\n",
+    "    coords = dict(\n",
+    "        timebound = np.arange(1750, 2301),\n",
+    "        timepoint = np.arange(1750.5, 2300),\n",
+    "        scenario = scenarios,\n",
+    "        config = configs,\n",
+    "        specie = [\"CO2\", \"CH4\"]\n",
+    "    )\n",
+    ")\n",
+    "ds.to_netcdf(os.path.join(datadir, 'calibration_v1.4.0_harmonization_2022.nc'))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".conda-fair-calibrate-v1.4-comparison Python (Conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-.conda-fair-calibrate-v1.4-comparison-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -808,7 +1144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
