slightly update legend

--- a/notebooks/analyse.ipynb
+++ b/notebooks/analyse.ipynb
@@ -542,7 +542,7 @@
     "legend_elements = [\n",
     "    Line2D([0], [0], color='k', ls='-', label='Cal. v1.4.1'),\n",
     "    Line2D([0], [0], color='k', ls='--', label='Cal. v1.4.0, 2022 harmon.'),\n",
-    "    Line2D([0], [0], color='k', ls=':', label='Cal. v1.4.0 median'),\n",
+    "    Line2D([0], [0], color='k', ls=':', label='Cal. v1.4.0'),\n",
     "]\n",
     "\n",
     "ax[2].legend(handles=legend_elements, loc='upper left', frameon=False, fontsize=7)\n",
